tests/baselines/reference/compoundAdditionAssignmentWithInvalidOperands.errors.txt
==== tests/cases/compiler/compoundAdditionAssignmentWithInvalidOperands.ts (27 errors) ====
    enum E { a, b }
    
    var a: void;
    
    var x1: boolean;
    x1 += a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(6,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += true;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(7,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += 0;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(8,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += E.a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(9,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += {};
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(10,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += null;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(11,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x1 += undefined;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(12,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x2: {};
    x2 += a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(15,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += true;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(16,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += 0;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(17,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += E.a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(18,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += {};
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(19,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += null;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(20,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x2 += undefined;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(21,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x3: void;
    x3 += a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(24,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += true;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(25,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += 0;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(26,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += E.a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(27,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += {};
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(28,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += null;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(29,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x3 += undefined;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(30,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x4: number;
    x4 += a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(33,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x4 += true;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(34,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x4 += {};
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(35,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    var x5: E;
    x5 += a;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(38,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x5 += true;
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(39,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    x5 += {};
    ~~
!!! compoundAdditionAssignmentWithInvalidOperands.ts(40,1): error TS2111: Invalid '+' expression - types not known to support the addition operator.